
[package]
name = "i3-rng"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/daemon/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chrono = "0.4"
i3ipc = "0.10.1"
blake2 = "0.10.6"
generic-array = "0.14.6"
byteorder = "1.4.3"
chacha20 = "0.9.0"
typenum = "1.15.0"
hex = "0.4.3"
